# crosswords

./: README.md  check.font.short.clue.cols.puz  fix.the.down.thing.puz  fix_this.txt  one.super.long.clue.puz  x.2018.02.24.pl  x.pl
special puzzles/: circles.puz  circles2.puz  hyphens.55.across.puz  hyphens.in.65.across.puz  long.note.red.circles.puz  note.puz  one.down.edge.case.puz  rebus.puz  sunday.puz  sunday.red.circles.long.note.puz  sunday.red.circles.puz  taller.than.wide.red.circles.puz
special puzzles/3 orphans/: 3.orphans.Sep2513.puz
tests/: splitword.pl
x_archive/Games-Crossword-Puzzle-0.001/: META.yml
x_archive/New Folder/: Crosswords.pm  OLDsnarf.pl  new_snarf.pl  snarf.pl  x (3rd copy).pl  x (another copy).pl  x (copy).pl  x2.pl  x2.pl.tdy  x3.pl  x3.pl.tdy  x_old.pl
x_archive/libpuz-0.0.1/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.in  ltmain.sh
x_archive/libpuz-0.0.1/doc/: puz_spec.html
x_archive/libpuz-0.0.1/include/: Makefile.am  Makefile.in  libpuz_config.h.in  puz.h
x_archive/libpuz-0.0.1/src/: Makefile.am  Makefile.in  cksum.c  load.c  puzzle.c  save.c
x_archive/libpuz-0.0.1/utils/: Makefile.am  Makefile.in  readpuz.c
x_archive/old_miscellany/: 2puz.pl  3puz (copy).pl  PUZ File Format Specification.htm  bak_2puz.pl  bak_puz.pl  chopstr.pl  compare.pl  gext.pl  grid.odt  grid2.odt  grid3.odt  puz.pl  read.txt  rounded_rectangle.pl  splithyphens.pl  tran.pl  zzzz.ps
x_archive/older versions/: 2puz.pl  3puz (copy).pl  3puz.pl  older x.pl  puz.pl  sunday.pl  x (another copy).pl  x.pl  (+2 more)
(+87 files in other folders)
